tests/misc_errors/nameof.out
error: nameof.li 1,8: expression does not have a name
    1 | nameof('10')
      |        ^^^^
error: nameof.li 2,8: expression does not have a name
    2 | nameof(1 + 1)
      |        ^^^^^
error: nameof.li 4,8: expression does not have a name
    4 | nameof(a + a)
      |        ^^^^^
