tests/misc_errors/nameof.li
nameof('10')
nameof(1 + 1)
var a: int
nameof(a + a)
